<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/UHF_Battery"
        android:title="@string/obtain_electricity"
        app:showAsAction="never" />

    <item
        android:id="@+id/UHF_T"
        android:title="@string/module_temperature"
        app:showAsAction="never" />

    <item
        android:id="@+id/UHF_ver"
        android:title="@string/action_uhf_ver"
        app:showAsAction="never" />

    <item
        android:id="@+id/ble_ver"
        android:title="@string/action_ble_ver"
        app:showAsAction="never" />

    <item
        android:id="@+id/ble_disconnectTime"
        android:title="@string/disconnectTime"
        app:showAsAction="never" />

    <item
        android:id="@+id/exportData"
        android:title="Export Data"
        app:showAsAction="never" />
</menu>